; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c_DVD_Init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c_DVD_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__dvd_initflag = common dso_local global i32 0, align 4
@IRQ_PI_DI = common dso_local global i32 0, align 4
@__DVDInterruptHandler = common dso_local global i32 0, align 4
@__dvd_timeoutalarm = common dso_local global i32 0, align 4
@__dvd_wait_queue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DVD_Init() #0 {
  %1 = load i32, i32* @__dvd_initflag, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %14, label %3

3:                                                ; preds = %0
  store i32 1, i32* @__dvd_initflag, align 4
  %4 = call i32 (...) @__dvd_clearwaitingqueue()
  %5 = call i32 (...) @__DVDInitWA()
  %6 = load i32, i32* @IRQ_PI_DI, align 4
  %7 = load i32, i32* @__DVDInterruptHandler, align 4
  %8 = call i32 @IRQ_Request(i32 %6, i32 %7, i32* null)
  %9 = load i32, i32* @IRQ_PI_DI, align 4
  %10 = call i32 @IRQMASK(i32 %9)
  %11 = call i32 @__UnmaskIrq(i32 %10)
  %12 = call i32 @SYS_CreateAlarm(i32* @__dvd_timeoutalarm)
  %13 = call i32 @LWP_InitQueue(i32* @__dvd_wait_queue)
  br label %14

14:                                               ; preds = %3, %0
  ret void
}

declare dso_local i32 @__dvd_clearwaitingqueue(...) #1

declare dso_local i32 @__DVDInitWA(...) #1

declare dso_local i32 @IRQ_Request(i32, i32, i32*) #1

declare dso_local i32 @__UnmaskIrq(i32) #1

declare dso_local i32 @IRQMASK(i32) #1

declare dso_local i32 @SYS_CreateAlarm(i32*) #1

declare dso_local i32 @LWP_InitQueue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
